# OrustS

./: .gdbinit  .gitignore  Cargo.toml  README.md  build.rs  layout.yaml
bootloader/: Cargo.toml  build.rs  layout.yaml
bootloader/bios/shared/: Cargo.toml
bootloader/bios/shared/src/: gdt.rs  layout.rs  lib.rs
bootloader/bios/stage_1/: Cargo.toml  stage_1.ld.temp  target.json
bootloader/bios/stage_2/: stage_2.ld
bootloader/bios/stage_2/src/: img_load.rs
bootloader/bios/stage_3/: stage_3.ld.temp
bootloader/bios/stage_3/src/: display.rs
bootloader/shared/: Cargo.toml
bootloader/shared/src/: gdt.rs  kctx.rs  layout.rs  layout.rs.temp  lib.rs  mem.rs
bootloader/src/: main.rs
bootloader/src/bios/i386/: Cargo.toml
bootloader/src/bios/shared/: Cargo.toml
bootloader/src/bios/stage_1/: Cargo.toml  stage_1.ld  stage_1.ld.temp
bootloader/src/bios/stage_2/: Cargo.toml  stage_2.ld  stage_2.ld.temp
bootloader/src/bios/stage_3/: Cargo.toml  stage_3.ld  (+2 more)
bootloader/stage_1/: Cargo.toml  stage_1.ld  target.json
bootloader/stage_1/src/: img_load.rs  main.rs
bootloader/stage_2/: Cargo.toml  stage_2.ld  stage_2.ld.temp  target.json
bootloader/stage_2/src/: a20.rs  display.rs  img_load.rs  main.rs  mem.rs  mode_switch.rs
bootloader/stage_3/: Cargo.toml  stage_3.ld  stage_3.ld.temp  target.json
bootloader/stage_3/src/: display.rs  kctx.rs  load_kernel.rs  main.rs  paging.rs
kernel/: Cargo.toml  build.rs  kernel.ld  target.json
kernel/kbuild/: Cargo.toml
kernel/kbuild/src/: bootloader.rs  config.rs  main.rs
kernel/src/: display.rs  main.rs
(+118 files in other folders)
