[package]
name = "bootloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layout = { path = "src/bios/layout" }

[build-dependencies]
llvm-tools = "0.1.1"
handlebars = "4.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

