[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lazy_static = "1.4.0"
llvm-tools = "0.1.1"
handlebars = "4.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
